fixed margin on small screens

--- a/resources/less/metager/pages/resultpage/result-page.less
+++ b/resources/less/metager/pages/resultpage/result-page.less
@@ -484,7 +484,7 @@ a {
 
                 .search-input-submit {
                     border-radius: 5px;
-                    margin-right: 20px;
+                    margin-right: 30px;
                 }
 
                 >* {
